Changed description to instructor from grad student.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div class="row">
 		<div class="col c12">
 			<h3>About</h3>
-			<p>I am a second year graduate student at the University of South Carolina.</p>
+			<p>I am a full time instructor at the University of South Carolina.</p>
 		</div>
 	</div>
 	
