Added lecture notes, student resources

--- a/courses/122/Summer17/122SyllabusSummer17.html
+++ b/courses/122/Summer17/122SyllabusSummer17.html
@@ -1391,8 +1391,8 @@ available by appointment.<o:p></o:p></span></p>
 
 <p class=MsoNormal style='tab-stops:right 6.5in'><b style='mso-bidi-font-weight:
 normal'><span style='font-size:11.0pt'>Web Page: </span></b><span
-style='font-size:11.0pt'>The syllabus, course outline, notes, handouts, grades,
-and course announcements will be posted on Blackboard: blackboard.sc.edu.<o:p></o:p></span></p>
+style='font-size:11.0pt'>The syllabus, course outline, notes, handouts,
+and course announcements will be posted on the course webpage, people.math.sc.edu/aclifton/website/courses/122/Summer17/teaching.html.<o:p></o:p></span></p>
 
 <p class=MsoNormal style='text-align:justify;tab-stops:right 6.0in'><span
 style='font-size:11.0pt'><o:p>&nbsp;</o:p></span></p>
