--- a/courses/122/Summer17/teaching.html
+++ b/courses/122/Summer17/teaching.html
@@ -18,8 +18,8 @@
 		<ul class="toplinks_links">
 			<li><a href="../../../index.html">Home</a></li>
 			<li><a href="../../../teaching.html">Teaching</a></li>
-			<li><a href="#">CV</a></li>
-			<li><a href="#">Student Resources</a></li>
+			<li><a href="../../../CV.pdf">CV</a></li>
+			<li><a href="../../../studentresources.html">Student Resources</a></li>
 		</ul>
 	</div>
 	<div id="header" class="clearfix">
@@ -60,10 +60,10 @@
 		
 		<h3>Course Syllabus</h3>
 		<p><ul>
-	    <li><a href="122SyllabusSummer17.html">Math 122 Summer 2017</a></li>
+	    <li><a href="122SyllabusSummer17.html">Math 122-Y01 Syllabus</a></li>
 	  </ul></p>
 		<h3>Course Materials</h3>
-		<p>Lecture Notes</p>
+		<p><a href="LectureNotes.html">Lecture Notes</a></p>
 		<p>Activities/Worksheets</p>
 		<p>Quizzes and Solutions</p>
 		<p>Exams and Solutions</p>
