--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="teaching.html">Teaching</a></li>
 			<li><a href="CV.pdf">CV</a></li>
-			<li><a href="#">Student Resources</a></li>
+			<li><a href="studentresources.html">Student Resources</a></li>
 		</ul>
 	</div>
 
