--- a/teaching.html
+++ b/teaching.html
@@ -18,8 +18,8 @@
 		<ul class="toplinks_links">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="teaching.html">Teaching</a></li>
-			<li><a href="#">CV</a></li>
-			<li><a href="#">Student Resources</a></li>
+			<li><a href="CV.pdf">CV</a></li>
+			<li><a href="studentresources.html">Student Resources</a></li>
 		</ul>
 	</div>
 	<div id="header" class="clearfix">
