--- a/courses/122/Summer17/Quizzes.html
+++ b/courses/122/Summer17/Quizzes.html
@@ -54,7 +54,7 @@
 			<div class="inner">
 				<h2>Quiz Solutions</h2>
 				<p><li><a href="Quiz2Sols.pdf">Quiz 2</a></li></p>
-				
+				<p><li><a href="Quiz3Sols.pdf">Quiz 3</a></li></p>
 			</div>
 		</div>
 
