--- a/courses/122/Summer17/teaching.html
+++ b/courses/122/Summer17/teaching.html
@@ -64,8 +64,8 @@
 	  </ul></p>
 		<h3>Course Materials</h3>
 		<p><a href="LectureNotes.html">Lecture Notes</a></p>
-		<p><a href="Worksheets.html">Activities/Worksheets</p>
-		<p><a href="Quizzes.html">Quizzes and Solutions</p>
+		<p><a href="Worksheets.html">Activities/Worksheets</a></p>
+		<p><a href="Quizzes.html">Quizzes and Solutions</a></p>
 		<p>Exams and Solutions</p>
 	</div>
 
