--- a/courses/122/Summer17/LectureNotes.html
+++ b/courses/122/Summer17/LectureNotes.html
@@ -57,20 +57,20 @@
 				<p><li><a href="LectureNotes/Ch1S4to6.pdf">Sections 1.4-1.6</a></li></p>
 				<p><li><a href="LectureNotes/Ch1S7to8.pdf">Sections 1.7-1.8</a></li></p>
 				<p><li><a href="LectureNotes/Ch1S9.pdf">Section 1.9</a></li></p>
-				<p><li><a href="LectureNotes/Ch2S1.pdf">Section 2.1</a></li></p>
-				<p><li><a href="LectureNotes/Ch2S2.pdf">Section 2.2</a></li></p>
+				
 			</div>
 		</div>
 
 		<div id="trio2">
 			<div class="inner">
 				<h2>Exam 2</h2>
-				<p><li><a href="LectureNotes/Ch2S3to4.pdf">Sections 2.3-2.4</a></li></p>
-				<p><li><a href="LectureNotes/Ch2S5Ch3S1.pdf">Sections 2.5-3.1</a></li></p>
-				<p><li><a href="LectureNotes/Ch2S2to3.pdf">Sections 3.2-3.3</a></li></p>
-				<p><li><a href="LectureNotes/Ch3S4Ch4S1.pdf">Sections 3.4-4.1</a></li></p>
-				<p><li><a href="LectureNotes/Ch4S2to3.pdf">Sections 4.2-4.3</a></li></p>
-				<p><li><a href="LectureNotes/Ch4S4.pdf">Section 4.4</a></li></p>
+				<p><li><a href="LectureNotes/Ch2S1.pdf">Section 2.1</a></li></p>
+				<p><li><a href="LectureNotes/Ch2S2.pdf">Section 2.2</a></li></p>
+				<p><li><a href="LectureNotes/Ch3S1to2.pdf">Sections 3.1-3.2</a></li></p>
+				<p><li><a href="LectureNotes/Ch3S3to4.pdf">Sections 3.3-3.4</a></li></p>
+				<p><li><a href="LectureNotes/Ch2S4.pdf">Section 2.4</a></li></p>
+				<p><li><a href="LectureNotes/Ch4S1to2.pdf">Sections 4.1-4.2</a></li></p>
+				<p><li><a href="LectureNotes/Ch4S3to4Ch2S5.pdf">Sections 4.3, 2.5, 4.4</a></li></p>
 			</div>
 		</div>
 
