Added Exams.html, Exam 1&Sols, added link to Exams.html, Fixed copyright at bottom of teaching pages

--- a/courses/122/Summer17/Quizzes.html
+++ b/courses/122/Summer17/Quizzes.html
@@ -25,7 +25,7 @@
 
 	<div id="header" class="clearfix shadow">
 		<div id="sitetitle" class="clearfix">
-			<h1><a href="index.html">Lecture Notes</a></h1>
+			<h1><a href="index.html">Quizzes</a></h1>
 		</div>
 
 		<!--<div id="nav" class="clearfix">
@@ -87,7 +87,7 @@
 	</div>
 
 	<div id="footer" class="shadow">
-		<p>&copy; 2012 Your Name | <a href="http://andreasviklund.com/templates/inland/">Template design</a> by <a href="http://andreasviklund.com/">andreasviklund.com</a><br />Best hosted at <a href="https://www.svenskadomaner.se/?ref=mall&amp;ling=en" title="Svenska Domäner AB">www.svenskadomaner.se</a></p>
+		<p>&copy; 2017 Ann Clifton | <a href="http://andreasviklund.com/templates/inland/">Template design</a> by <a href="http://andreasviklund.com/">andreasviklund.com</a></p>
 	</div>
 </div>
 
