--- a/courses/122/Summer17/teaching.html
+++ b/courses/122/Summer17/teaching.html
@@ -66,7 +66,7 @@
 		<p><a href="LectureNotes.html">Lecture Notes</a></p>
 		<p><a href="Worksheets.html">Activities/Worksheets</a></p>
 		<p><a href="Quizzes.html">Quizzes and Solutions</a></p>
-		<p>Exams and Solutions</p>
+		<p><a href="Exams.html">Exams and Solutions</a></p>
 	</div>
 
 	<div id="footer" class="shadow">
