--- a/courses/122/Summer17/Exams.html
+++ b/courses/122/Summer17/Exams.html
@@ -25,7 +25,7 @@
 
 	<div id="header" class="clearfix shadow">
 		<div id="sitetitle" class="clearfix">
-			<h1><a href="index.html">Worksheets</a></h1>
+			<h1><a href="index.html">Exams</a></h1>
 		</div>
 
 		<!--<div id="nav" class="clearfix">
@@ -52,10 +52,10 @@
 	<div id="content" class="clearfix shadow">
 		<div id="trio1">
 			<div class="inner">
-				<h2>Worksheet Solutions</h2>
-				<p><li><a href="Worksheet1Sols.pdf">Worksheet 1 (Factoring)</a></li></p>
-				<p><li><a href="Worksheet2Sols.pdf">Worksheet 2 (Section 1.8)</a></li></p>
-				<p><li><a href="Worksheet3Sols.pdf">Worksheet 3 (Sections 2.1-2.2)</a></li></p>
+				<h2>Blank Exams</h2>
+				<p><li><a href="Sum17Exam1.pdf">Exam 1 (Chapter 1) Blank</a></li></p>
+				<h2>Exam Solutions</h2>
+				<p><li><a href="Sum17Exam1Sols.pdf">Exam 1 (Chapter 1) Sols</a></li></p>	
 			</div>
 		</div>
 
