--- a/courses/122/Summer17/LectureNotes.html
+++ b/courses/122/Summer17/LectureNotes.html
@@ -91,7 +91,7 @@
 	</div>
 
 	<div id="footer" class="shadow">
-		<p>&copy; 2012 Your Name | <a href="http://andreasviklund.com/templates/inland/">Template design</a> by <a href="http://andreasviklund.com/">andreasviklund.com</a><br />Best hosted at <a href="https://www.svenskadomaner.se/?ref=mall&amp;ling=en" title="Svenska Domäner AB">www.svenskadomaner.se</a></p>
+		<p>&copy; 2017 Ann Clifton | <a href="http://andreasviklund.com/templates/inland/">Template design</a> by <a href="http://andreasviklund.com/">andreasviklund.com</a></p>
 	</div>
 </div>
 
