--- a/courses/122/Summer17/Quizzes.html
+++ b/courses/122/Summer17/Quizzes.html
@@ -56,6 +56,7 @@
 				<p><li><a href="Quiz2Sols.pdf">Quiz 2</a></li></p>
 				<p><li><a href="Quiz3Sols.pdf">Quiz 3</a></li></p>
 				<p><li><a href="Sum17Quiz4Sols.pdf">Quiz 4</a></li></p>
+				<p><li><a href="Sum17Quiz5Sols.pdf">Quiz 5</a></li></p>
 			</div>
 		</div>
 
