--- a/courses/122/Summer17/Worksheets.html
+++ b/courses/122/Summer17/Worksheets.html
@@ -56,6 +56,8 @@
 				<p><li><a href="Worksheet1Sols.pdf">Worksheet 1 (Factoring)</a></li></p>
 				<p><li><a href="Worksheet2Sols.pdf">Worksheet 2 (Section 1.8)</a></li></p>
 				<p><li><a href="Worksheet3Sols.pdf">Worksheet 3 (Sections 2.1-2.2)</a></li></p>
+				<p><li><a href="122DerWksht.pdf">Derivative Practice</a></li></p>
+				<p><li><a href="Worksheet4Sols.pdf">Worksheet 4 (Chapter 3)</a></li></p>
 			</div>
 		</div>
 
