--- a/courses/122/Summer17/Quizzes.html
+++ b/courses/122/Summer17/Quizzes.html
@@ -57,6 +57,7 @@
 				<p><li><a href="Quiz3Sols.pdf">Quiz 3</a></li></p>
 				<p><li><a href="Sum17Quiz4Sols.pdf">Quiz 4</a></li></p>
 				<p><li><a href="Sum17Quiz5Sols.pdf">Quiz 5</a></li></p>
+				<p><li><a href="Sum17Quiz6Sols.pdf">Quiz 6</a></li></p>
 			</div>
 		</div>
 
