--- a/courses/122/Summer17/LectureNotes.html
+++ b/courses/122/Summer17/LectureNotes.html
@@ -77,15 +77,12 @@
 		<div id="trio3">
 			<div class="inner">
 				<h2>Exam 3</h2>
-				<p><li><a href="LectureNotes/Ch5S1to3.pdf">Sections 5.1-5.3</a></li></p>
-				<p><li><a href="LectureNotes/Ch5S4.pdf">Section 5.4</a></li></p>
-				<p><li><a href="LectureNotes/Ch5S5.pdf">Section 5.5</a></li></p>
-				<p><li><a href="LectureNotes/Ch6S1.pdf">Section 6.1</a></li></p>
-				<p><li><a href="LectureNotes/Ch6S2.pdf">Section 6.2</a></li></p>
-				<p><li><a href="LectureNotes/Ch6S3.pdf">Section 6.3</a></li></p>
-				<p><li><a href="LectureNotes/Ch6S6.pdf">Section 6.6</a></li></p>
-				<p><li><a href="LectureNotes/Ch5S6.pdf">Section 5.6</a></li></p>
-				<p><li><a href="LectureNotes/Ch6S4.pdf">Section 6.4</a></li></p>
+				<p><li><a href="LectureNotes/Ch5S1.pdf">Sections 5.1</a></li></p>
+				<p><li><a href="LectureNotes/Ch5S2S5.pdf">Sections 5.2, 5.5</a></li></p>
+				<p><li><a href="LectureNotes/Ch6S1to2.pdf">Sections 6.1-6.2</a></li></p>
+				<p><li><a href="LectureNotes/Ch6S3S6.pdf">Sections 6.3, 6.6</a></li></p>
+				<p><li><a href="LectureNotes/Ch5S3.pdf">Section 5.3</a></li></p>
+				
 			</div>
 		</div>
 	</div>
