--- a/courses/122/Summer17/Exams.html
+++ b/courses/122/Summer17/Exams.html
@@ -55,7 +55,9 @@
 				<h2>Blank Exams</h2>
 				<p><li><a href="Sum17Exam1.pdf">Exam 1 (Chapter 1) Blank</a></li></p>
 				<h2>Exam Solutions</h2>
-				<p><li><a href="Sum17Exam1Sols.pdf">Exam 1 (Chapter 1) Sols</a></li></p>	
+				<p><li><a href="Sum17Exam1Sols.pdf">Exam 1 (Chapter 1) Sols</a></li></p>
+				<p><li><a href="Sum17Exam2Sols.pdf">Exam 2 (Chapters 2-4) Sols</a></li></p>	
+				<p><li><a href="ECExam2.pdf">Exam 2 Extra Credit (Last problem from Ch. 3 Worksheet)</a></li></p>
 			</div>
 		</div>
 
