Added calc worksheet resource

--- a/studentresources.html
+++ b/studentresources.html
@@ -80,6 +80,7 @@
 		<p><li><a href="http://www.wolframalpha.com/examples/Math.html/">WolframAlpha Math Examples</a></li></p>
 		<p><li><a href="http://www.wolframalpha.com/calculators/integral-calculator/?redirected=true/">WolframAlpha Integral Calculator</a></li></p>
 		<p><li><a href="https://www.khanacademy.org/">Khan Academy</a></li></p>
+		<p><li><a href="https://www.kutasoftware.com/freeica.html/">Free Calculus Worksheets with Solutions</a></li></p>
 	</div>
 
 	<div id="footer" class="shadow">
