--- a/courses/122/Summer17/Worksheets.html
+++ b/courses/122/Summer17/Worksheets.html
@@ -25,7 +25,7 @@
 
 	<div id="header" class="clearfix shadow">
 		<div id="sitetitle" class="clearfix">
-			<h1><a href="index.html">Worksheets</a></h1>
+			<h1><a href="index.html">Worksheets & Activities</a></h1>
 		</div>
 
 		<!--<div id="nav" class="clearfix">
@@ -56,25 +56,26 @@
 				<p><li><a href="Worksheet1Sols.pdf">Worksheet 1 (Factoring)</a></li></p>
 				<p><li><a href="Worksheet2Sols.pdf">Worksheet 2 (Section 1.8)</a></li></p>
 				<p><li><a href="Worksheet3Sols.pdf">Worksheet 3 (Sections 2.1-2.2)</a></li></p>
-				<p><li><a href="122DerWksht.pdf">Derivative Practice</a></li></p>
 				<p><li><a href="Worksheet4Sols.pdf">Worksheet 4 (Chapter 3)</a></li></p>
 				<p><li><a href="GradeThisDerQuiz.pdf">Grade This Quiz (Derivatives)</a></li></p>
+				<p><li><a href="AntiderSols.pdf">Antiderivative Practice</a></li></p>
+				
 			</div>
 		</div>
 
-		<!--<div id="trio2">
+		<div id="trio2">
 			<div class="inner">
-				<h2>Exam 2</h2>
-				<p><li><a href="LectureNotes/Ch2S3to4.pdf">Sections 2.3-2.4</a></li></p>
-				<p><li><a href="LectureNotes/Ch2S5Ch3S1.pdf">Sections 2.5-3.1</a></li></p>
-				<p><li><a href="LectureNotes/Ch2S2to3.pdf">Sections 3.2-3.3</a></li></p>
-				<p><li><a href="LectureNotes/Ch3S4Ch4S1.pdf">Sections 3.4-4.1</a></li></p>
-				<p><li><a href="LectureNotes/Ch4S2to3.pdf">Sections 4.2-4.3</a></li></p>
-				<p><li><a href="LectureNotes/Ch4S4.pdf">Section 4.4</a></li></p>
+				<h2>Activities & Blank Worksheets</h2>
+				<p><li><a href="more_integral_dominoes.pdf">Definite Integral Dominoes</a></li></p>
+				<p><li><a href="uSubPractice.pdf">Integration by Substitution Practice</a></li></p>
+				<p><li><a href="ApproximatingAreaUnderACurve.pdf">Approximating Area Under a Curve: Riemann Sums (includes solutions)</a></li></p>
+				<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
+				<p><li><a href="Differentiation.pdf">Chapter 3 Differentiation Worksheet</a></li></p>
+				<p><li><a href="122DerWksht.pdf">Derivative Practice (includes solutions)</a></li></p>
 			</div>
 		</div>
 
-		<div id="trio3">
+		<!--<div id="trio3">
 			<div class="inner">
 				<h2>Exam 3</h2>
 				<p><li><a href="LectureNotes/Ch5S1to3.pdf">Sections 5.1-5.3</a></li></p>
