--- a/courses/122/Summer17/Worksheets.html
+++ b/courses/122/Summer17/Worksheets.html
@@ -68,6 +68,7 @@
 				<h2>Activities & Blank Worksheets</h2>
 				<p><li><a href="more_integral_dominoes.pdf">Definite Integral Dominoes</a></li></p>
 				<p><li><a href="uSubPractice.pdf">Integration by Substitution Practice</a></li></p>
+				<p><li><a href="Antiderivatives.pdf">Antiderivative Practice</a></li></p>
 				<p><li><a href="ApproximatingAreaUnderACurve.pdf">Approximating Area Under a Curve: Riemann Sums (includes solutions)</a></li></p>
 				<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
 				<p><li><a href="Differentiation.pdf">Chapter 3 Differentiation Worksheet</a></li></p>
