Added quiz 8,9 sols, uSub sols

--- a/courses/122/Summer17/Quizzes.html
+++ b/courses/122/Summer17/Quizzes.html
@@ -58,6 +58,8 @@
 				<p><li><a href="Sum17Quiz4Sols.pdf">Quiz 4</a></li></p>
 				<p><li><a href="Sum17Quiz5Sols.pdf">Quiz 5</a></li></p>
 				<p><li><a href="Sum17Quiz6Sols.pdf">Quiz 6</a></li></p>
+				<p><li><a href="Quiz8Sols.pdf">Quiz 8</a></li></p>
+				<p><li><a href="Quiz9Sols.pdf">Quiz 9</a></li></p>
 			</div>
 		</div>
 
