--- a/courses/122/Summer17/Worksheets.html
+++ b/courses/122/Summer17/Worksheets.html
@@ -59,6 +59,7 @@
 				<p><li><a href="Worksheet4Sols.pdf">Worksheet 4 (Chapter 3)</a></li></p>
 				<p><li><a href="GradeThisDerQuiz.pdf">Grade This Quiz (Derivatives)</a></li></p>
 				<p><li><a href="AntiderSols.pdf">Antiderivative Practice</a></li></p>
+				<p><li><a href="uSubSols.pdf">Integration by Substitution Solutions</a></li></p>
 				
 			</div>
 		</div>
