--- a/teaching.html
+++ b/teaching.html
@@ -60,9 +60,11 @@
 		
 		<h3>Current Courses</h3>
 		<p><ul>
-	    <li><a href="courses/122/Summer17/teaching.html">Math 122 Summer 2017</a></li>
+	    <li><a href="courses/122/Fall17/teaching.html">Math 122 Fall 2017</a></li>
+	    <li><a href="courses/141/Fall17/teaching.html">Math 141 Fall 2017</a></li>
 	  </ul></p>
 		<h3>Past Courses</h3>
+		<li><a href="courses/122/Summer17/teaching.html">Math 122 Summer 2017</a></li>
 		<p>Math 141 Spring 17</p>
 		<p>Math 142 Spring 17</p>
 		<p>Math 122 Fall 16</p>
