Updated 122 syllabi, added WileyPlus Access instructions, updated office hours

--- a/courses/122/Fall17/teaching.html
+++ b/courses/122/Fall17/teaching.html
@@ -64,6 +64,8 @@
 	    <li><a href="122SyllabusF17Y05.pdf">Math 122-Y05 Syllabus</a></li>
 	  </ul></p>
 		<h3>Course Materials</h3>
+		<p><a href="Y04flyer.pdf">WileyPlus Access Instructions for Section Y04</a></p>
+		<p><a href="Y05flyer.pdf">WileyPlus Access Instructions for Section Y05</a></p>
 		<p><a href="LectureNotes.html">Lecture Notes</a></p>
 		<p><a href="Worksheets.html">Activities/Worksheets</a></p>
 		<p><a href="Quizzes.html">Quizzes and Solutions</a></p>
