--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 	<div id="content" class="clearfix shadow">
 		<h2>About</h2>
 		<p>I am a full time instructor at the University of South Carolina.  My academic interests
-		include graph theory (in particular, the packing chromatic number and Ramsey theory) and mathematics education.
-		Other interests include hiking, backpacking, fishing, cooking, and playing with my dog, Emmy.
+		include graph theory (in particular, the packing chromatic number, Ramsey theory, and domination) and mathematics education.
+		Other interests include hiking, backpacking, fishing, cooking, spending time with my husband, and playing with our dog, Emmy.
 		 </p>
 	</div>
 
@@ -72,8 +72,9 @@
 		<div id="trio2">
 			<div class="inner">
 				<h3>Office Hours</h3>
-				<p>Summer 2017<br/>
-				Tuesday, Wednesday, Thursday 12-1pm<br/>
+				<p>Fall 2017<br/>
+				Monday 7-8pm<br/>
+				Tuesday, Thursday 1-2:30pm<br/>
 				Also by appointment.</p>
 			</div>
 		</div>
