Added blank Quiz 1s, Algebra/Trig review

--- a/courses/141/Fall17/Worksheets.html
+++ b/courses/141/Fall17/Worksheets.html
@@ -53,8 +53,8 @@
 		<div id="trio1">
 			<div class="inner">
 				<h2>Worksheet Solutions</h2>
-				<!--<p><li><a href="Worksheet1Sols.pdf">Worksheet 1 (Factoring)</a></li></p>
-				<p><li><a href="Worksheet2Sols.pdf">Worksheet 2 (Section 1.8)</a></li></p>
+				<p><li><a href="AlgebraTrigReview.pdf">Paul's Online Math Notes - Algebra/Trig Review</a></li></p>
+				<!--<p><li><a href="Worksheet2Sols.pdf">Worksheet 2 (Section 1.8)</a></li></p>
 				<p><li><a href="Worksheet3Sols.pdf">Worksheet 3 (Sections 2.1-2.2)</a></li></p>
 				<p><li><a href="Worksheet4Sols.pdf">Worksheet 4 (Chapter 3)</a></li></p>
 				<p><li><a href="GradeThisDerQuiz.pdf">Grade This Quiz (Derivatives)</a></li></p>
