--- a/studentresources.html
+++ b/studentresources.html
@@ -74,6 +74,7 @@
 		semester operation, the SSC has multiple satellite locations for peer tutoring in addition to online tutoring.</p>
 		<h3>Online Resources</h3>
 		<p>Student suggested websites for extra help and examples. If you have a suggestion, please let me know!</p>
+		<p><li><a href="http://tutorial.math.lamar.edu/Classes/CalcI/CalcI.aspx">Paul's Online Math Notes</a></li></p>
 		<p><li><a href="http://patrickjmt.com/">Patrick, Just Math Tutorials</a></li></p>
 		<p><li><a href="http://www.sosmath.com/calculus/calculus.html/">S.O.S. Mathematics - Calculus</a></li></p>
 		<p><li><a href="https://ocw.mit.edu/courses//">MIT Open Courseware</a></li></p>
