Updated tutoring hours and links

--- a/studentresources.html
+++ b/studentresources.html
@@ -69,8 +69,8 @@
 	  	This website is used for online homework in Math 141 and 142.</p>
 		<h3>Tutoring Centers</h3>
 		<p><li><a href="http://www.math.sc.edu/math-tutoring-center/">LeConte Math Tutoring Center</a></li>Located in LC105<br/>
-		 <b>2017 Summer II Schedule:</b> Monday-Thursday 10:30am-2:30pm</p>
-		<p><li><a href="http://www.sc.edu/success/peertutoring.html/">Student Success Center</a></li> During normal
+		 <b>2017 Fall Schedule:</b> Monday-Thursday 10:00am-4:00pm</p>
+		<p><li><a href="http://www.sc.edu/about/offices_and_divisions/student_success_center/tutoring/index.php">Student Success Center</a></li> During normal
 		semester operation, the SSC has multiple satellite locations for peer tutoring in addition to online tutoring.</p>
 		<h3>Online Resources</h3>
 		<p>Student suggested websites for extra help and examples. If you have a suggestion, please let me know!</p>
