--- a/teaching.html
+++ b/teaching.html
@@ -63,8 +63,9 @@
 	    <li><a href="courses/122/Fall17/teaching.html">Math 122 Fall 2017</a></li>
 	    <li><a href="courses/141/Fall17/teaching.html">Math 141 Fall 2017</a></li>
 	  </ul></p>
-		<h3>Past Courses</h3>
-		<li><a href="courses/122/Summer17/teaching.html">Math 122 Summer 2017</a></li>
+		<h2>Past Courses</h2>
+		<h3>University of South Carolina</h3>
+		<p>Math 122 Summer 2017</p>
 		<p>Math 141 Spring 17</p>
 		<p>Math 142 Spring 17</p>
 		<p>Math 122 Fall 16</p>
