--- a/courses/141/Fall17/Quizzes.html
+++ b/courses/141/Fall17/Quizzes.html
@@ -56,8 +56,8 @@
 				<p><li><a href="Quiz1C.pdf">Quiz 1 - Ch. 1</a></li></p>
 				<h2>Quiz Solutions</h2>
 				<p><li><a href="Quiz1Sols.pdf">Quiz 1 - Ch. 1</a></li></p>
-				<!--<p><li><a href="Quiz3Sols.pdf">Quiz 3</a></li></p>
-				<p><li><a href="Sum17Quiz4Sols.pdf">Quiz 4</a></li></p>
+				<p><li><a href="Quiz2Sols.pdf">Quiz 2</a></li></p>
+				<!--<p><li><a href="Sum17Quiz4Sols.pdf">Quiz 4</a></li></p>
 				<p><li><a href="Sum17Quiz5Sols.pdf">Quiz 5</a></li></p>
 				<p><li><a href="Sum17Quiz6Sols.pdf">Quiz 6</a></li></p>
 				<p><li><a href="Quiz8Sols.pdf">Quiz 8</a></li></p>
