--- a/courses/141/Fall17/Quizzes.html
+++ b/courses/141/Fall17/Quizzes.html
@@ -54,6 +54,8 @@
 			<div class="inner">
 				<h2>Blank Quizzes</h2>
 				<p><li><a href="Quiz1C.pdf">Quiz 1 - Ch. 1</a></li></p>
+				<p><li><a href="F17Quiz2.pdf">Quiz 2</a></li></p>
+				<p><li><a href="F17Quiz3.pdf">Quiz 3</a></li></p>
 				<h2>Quiz Solutions</h2>
 				<p><li><a href="Quiz1Sols.pdf">Quiz 1 - Ch. 1</a></li></p>
 				<p><li><a href="Quiz2Sols.pdf">Quiz 2</a></li></p>
