--- a/courses/122/Fall17/Quizzes.html
+++ b/courses/122/Fall17/Quizzes.html
@@ -55,6 +55,7 @@
 				<h2>Blank Quizzes</h2>
 				<p><li><a href="Quiz1.pdf">Quiz 2: Sections 1.1-1.3</a></li></p>
 				<p><li><a href="Quiz3.pdf">Quiz 3: Sections 1.4-1.5</a></li></p>
+				<p><li><a href="WrittenHW2.pdf">Take-Home Quiz 1: Ch. 1, Due Oct. 11</a></li></p>
 				<h2>Quiz Solutions</h2>
 				<p><li><a href="Quiz1Sols.pdf">Quiz 2: Sections 1.1-1.3</a></li></p>
 				<p><li><a href="Quiz3Sols.pdf">Quiz 3: Sections 1.4-1.5</a></li></p>
