--- a/courses/122/Fall17/Exams.html
+++ b/courses/122/Fall17/Exams.html
@@ -57,8 +57,8 @@
 				<p><li><a href="Sum17Exam2.pdf">Exam 2 (Chapters 2-4)</a></li></p>
 				<p><li><a href="Sum17Exam3.pdf">Exam 3 (Chapters 5-6)</a></li></p>-->
 				<h2>Exam Solutions</h2>
-				<!--<p><li><a href="Sum17Exam1Sols.pdf">Exam 1 (Chapter 1) Sols</a></li></p>
-				<p><li><a href="Sum17Exam2Sols.pdf">Exam 2 (Chapters 2-4) Sols</a></li></p>	
+				<p><li><a href="Sum17Exam1Sols.pdf">Exam 1 Version A (Chapter 1) Sols</a></li></p>
+				<!--<p><li><a href="Sum17Exam2Sols.pdf">Exam 2 (Chapters 2-4) Sols</a></li></p>	
 				<p><li><a href="ECExam2.pdf">Exam 2 Extra Credit (Last problem from Ch. 3 Worksheet)</a></li></p>
 				<p><li><a href="Sum17Exam3Sols.pdf">Exam 3 (Chapters 5-6) Sols</a></li></p>-->
 			</div>
