--- a/courses/122/Fall17/Worksheets.html
+++ b/courses/122/Fall17/Worksheets.html
@@ -55,9 +55,9 @@
 				<h2>Worksheet Solutions</h2>
 				<!--<p><li><a href="AlgebraTrigReview.pdf">Paul's Online Math Notes - Algebra/Trig Review</a></li></p>
 				<p><li><a href="Worksheet2Sols.pdf">Worksheet 2 (Section 1.8)</a></li></p>
-				<p><li><a href="Worksheet3Sols.pdf">Worksheet 3 (Sections 2.1-2.2)</a></li></p>
-				<p><li><a href="Worksheet4Sols.pdf">Worksheet 4 (Chapter 3)</a></li></p>
-				<p><li><a href="GradeThisDerQuiz.pdf">Grade This Quiz (Derivatives)</a></li></p>
+				<p><li><a href="Worksheet3Sols.pdf">Worksheet 3 (Sections 2.1-2.2)</a></li></p>-->
+				<p><li><a href="Worksheet4Sols.pdf">Worksheet 1 (Chapter 3)</a></li></p>
+				<!--<p><li><a href="GradeThisDerQuiz.pdf">Grade This Quiz (Derivatives)</a></li></p>
 				<p><li><a href="AntiderSols.pdf">Antiderivative Practice</a></li></p>
 				<p><li><a href="uSubSols.pdf">Integration by Substitution Solutions</a></li></p>
 				<p><li><a href="DefIntegralDomSols.pdf">Definite Integral Dominoes Solutions</a></li></p>-->
