--- a/courses/141/Fall17/LectureNotes.html
+++ b/courses/141/Fall17/LectureNotes.html
@@ -73,6 +73,8 @@
 		<div id="trio2">
 			<div class="inner">
 				<h2>Exam 2</h2>
+				<p><li><a href="LectureNotes/Chapter3/S3ThomasComplete.pdf">Section 3.3 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter3/DerivativeSummary.pdf">Derivatives Summary (Paul's Online Notes)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S5Thomas(Outline).pdf">Section 3.5 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S6Thomas(Outline).pdf">Section 3.6 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S9Thomas(Outline).pdf">Section 3.9 (Outline)</a></li></p>
