Added 3.7 3.8 notes to 141 F17

--- a/courses/141/Fall17/LectureNotes.html
+++ b/courses/141/Fall17/LectureNotes.html
@@ -76,7 +76,10 @@
 				<p><li><a href="LectureNotes/Chapter3/S3ThomasComplete.pdf">Section 3.3 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/DerivativeSummary.pdf">Derivatives Summary (Paul's Online Notes)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S5Thomas(Outline).pdf">Section 3.5 (Outline)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter3/S5Thomas(Outline).pdf">Section 3.5 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S6Thomas(Outline).pdf">Section 3.6 (Outline)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter3/S7Thomas(Outline).pdf">Section 3.7 (Outline)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter3/S8Thomas(Outline).pdf">Section 3.8 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S9Thomas(Outline).pdf">Section 3.9 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S10Thomas(Outline).pdf">Section 3.10 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S10ThomasPartII(Outline).pdf">Section 3.10 Part II (Outline)</a></li></p>
