--- a/courses/122/Fall17/Quizzes.html
+++ b/courses/122/Fall17/Quizzes.html
@@ -59,9 +59,9 @@
 				<h2>Quiz Solutions</h2>
 				<p><li><a href="Quiz1Sols.pdf">Quiz 2: Sections 1.1-1.3</a></li></p>
 				<p><li><a href="Quiz3Sols.pdf">Quiz 3: Sections 1.4-1.5</a></li></p>
-				<!--<p><li><a href="Sum17Quiz4Sols.pdf">Quiz 4</a></li></p>
-				<p><li><a href="Sum17Quiz5Sols.pdf">Quiz 5</a></li></p>
-				<p><li><a href="Sum17Quiz6Sols.pdf">Quiz 6</a></li></p>
+				<p><li><a href="takeHome1Sols.pdf">Take-Home Quiz 1 Solutions</a></li></p>
+				<p><li><a href="quiz5Sols.pdf">Quiz 5</a></li></p>
+				<!--<p><li><a href="Sum17Quiz6Sols.pdf">Quiz 6</a></li></p>
 				<p><li><a href="Quiz8Sols.pdf">Quiz 8</a></li></p>
 				<p><li><a href="Quiz9Sols.pdf">Quiz 9</a></li></p>-->
 			</div>
