Added link to 141 4.4 example

--- a/courses/141/Fall17/LectureNotes.html
+++ b/courses/141/Fall17/LectureNotes.html
@@ -87,7 +87,8 @@
 				<p><li><a href="LectureNotes/Chapter4/S2Thomas(Outline).pdf">Section 4.2 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter4/S3Thomas(Outline).pdf">Section 4.3 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter4/S4Thomas(Outline).pdf">Section 4.4 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter4/S5Thomas(Outline).pdf">Section 4.5 (Outline)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter4/S4ThomasExample.pdf">Section 4.4 (Finished Example)</a></li></p>
+				
 				
 			</div>
 		</div>
@@ -95,6 +96,7 @@
 		<div id="trio3">
 			<div class="inner">
 				<h2>Exam 3</h2>
+				<p><li><a href="LectureNotes/Chapter4/S5Thomas(Outline).pdf">Section 4.5 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter4/S8Thomas(Outline).pdf">Section 4.8 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S1Thomas(Outline).pdf">Section 5.1 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S23Thomas(Outline).pdf">Sections 5.2-5.3 (Outline)</a></li></p>
