--- a/courses/141/Fall17/Worksheets.html
+++ b/courses/141/Fall17/Worksheets.html
@@ -56,9 +56,9 @@
 				<p><li><a href="AlgebraTrigReview.pdf">Paul's Online Math Notes - Algebra/Trig Review</a></li></p>
 				<p><li><a href="DerivativeWorksheet.pdf">Derivative Practice</a></li></p>
 				<p><li><a href="gradeThisQuizSols.pdf">Grade This Quiz Solutions (Recitation Derivative Practice)</a></li></p>
-				<!--<p><li><a href="Worksheet4Sols.pdf">Worksheet 4 (Chapter 3)</a></li></p>
-				<p><li><a href="GradeThisDerQuiz.pdf">Grade This Quiz (Derivatives)</a></li></p>
-				<p><li><a href="AntiderSols.pdf">Antiderivative Practice</a></li></p>
+				<p><li><a href="ImplicitDifferentiationWorksheetSols.pdf">Implicit Differentiation</a></li></p>
+				<p><li><a href="RelatedRatesWorksheetSols.pdf">Related Rates</a></li></p>
+				<!--<p><li><a href="AntiderSols.pdf">Antiderivative Practice</a></li></p>
 				<p><li><a href="uSubSols.pdf">Integration by Substitution Solutions</a></li></p>
 				<p><li><a href="DefIntegralDomSols.pdf">Definite Integral Dominoes Solutions</a></li></p>-->
 				
@@ -69,9 +69,9 @@
 			<div class="inner">
 				<h2>Activities & Blank Worksheets</h2>
 				<p><li><a href="DefinitionofDerivative.pdf">Section 3.1 Practice</a></li></p>
-				<!--<p><li><a href="uSubPractice.pdf">Integration by Substitution Practice</a></li></p>
-				<p><li><a href="Antiderivatives.pdf">Antiderivative Practice</a></li></p>
-				<p><li><a href="ApproximatingAreaUnderACurve.pdf">Approximating Area Under a Curve: Riemann Sums (includes solutions)</a></li></p>
+				<p><li><a href="ImplicitDifferentiationWorksheet.pdf">Implicit Differentiation</a></li></p>
+				<p><li><a href="RelatedRatesWorksheet.pdf">Related Rates</a></li></p>
+				<!--<p><li><a href="ApproximatingAreaUnderACurve.pdf">Approximating Area Under a Curve: Riemann Sums (includes solutions)</a></li></p>
 				<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
 				<p><li><a href="Differentiation.pdf">Chapter 3 Differentiation Worksheet</a></li></p>
 				<p><li><a href="122DerWksht.pdf">Derivative Practice (includes solutions)</a></li></p>-->
