--- a/courses/141/Fall17/LectureNotes.html
+++ b/courses/141/Fall17/LectureNotes.html
@@ -97,6 +97,7 @@
 			<div class="inner">
 				<h2>Exam 3</h2>
 				<p><li><a href="LectureNotes/Chapter4/S5Thomas(Outline).pdf">Section 4.5 (Outline)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter4/S6Thomas(Outline).pdf">Section 4.6 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter4/S8Thomas(Outline).pdf">Section 4.8 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S1Thomas(Outline).pdf">Section 5.1 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S23Thomas(Outline).pdf">Sections 5.2-5.3 (Outline)</a></li></p>
