Added 122RiemannSols, 141 LHSols, 141RiemannSols, 122ApproxArea Practice

--- a/courses/122/Fall17/Worksheets.html
+++ b/courses/122/Fall17/Worksheets.html
@@ -57,8 +57,8 @@
 				<p><li><a href="Worksheet2Sols.pdf">Worksheet 2 (Section 1.8)</a></li></p>
 				<p><li><a href="Worksheet3Sols.pdf">Worksheet 3 (Sections 2.1-2.2)</a></li></p>-->
 				<p><li><a href="Worksheet4Sols.pdf">Worksheet 1 (Chapter 3)</a></li></p>
-				<!--<p><li><a href="GradeThisDerQuiz.pdf">Grade This Quiz (Derivatives)</a></li></p>
-				<p><li><a href="AntiderSols.pdf">Antiderivative Practice</a></li></p>
+				<p><li><a href="122RiemannSumSols.pdf">Riemann Sums (In Class Handout)</a></li></p>
+				<!--<p><li><a href="AntiderSols.pdf">Antiderivative Practice</a></li></p>
 				<p><li><a href="uSubSols.pdf">Integration by Substitution Solutions</a></li></p>
 				<p><li><a href="DefIntegralDomSols.pdf">Definite Integral Dominoes Solutions</a></li></p>-->
 				
@@ -68,10 +68,10 @@
 		<div id="trio2">
 			<div class="inner">
 				<h2>Activities & Blank Worksheets</h2>
-				<p><li><a href="RiemannSums.pdf">Riemann Sums</a></li></p>
+				<p><li><a href="RiemannSums.pdf">Riemann Sums (In Class Handout)</a></li></p>
+				<p><li><a href="ApproximatingAreaUnderACurve.pdf">Approximating Area Under a Curve: Riemann Sums (includes solutions)</a></li></p>
 				<!--<p><li><a href="uSubPractice.pdf">Integration by Substitution Practice</a></li></p>
 				<p><li><a href="Antiderivatives.pdf">Antiderivative Practice</a></li></p>
-				<p><li><a href="ApproximatingAreaUnderACurve.pdf">Approximating Area Under a Curve: Riemann Sums (includes solutions)</a></li></p>
 				<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
 				<p><li><a href="Differentiation.pdf">Chapter 3 Differentiation Worksheet</a></li></p>
 				<p><li><a href="122DerWksht.pdf">Derivative Practice (includes solutions)</a></li></p>-->
