--- a/courses/141/Fall17/Worksheets.html
+++ b/courses/141/Fall17/Worksheets.html
@@ -58,8 +58,8 @@
 				<p><li><a href="gradeThisQuizSols.pdf">Grade This Quiz Solutions (Recitation Derivative Practice)</a></li></p>
 				<p><li><a href="ImplicitDifferentiationWorksheetSols.pdf">Implicit Differentiation</a></li></p>
 				<p><li><a href="RelatedRatesWorksheetSols.pdf">Related Rates</a></li></p>
-				<!--<p><li><a href="AntiderSols.pdf">Antiderivative Practice</a></li></p>
-				<p><li><a href="uSubSols.pdf">Integration by Substitution Solutions</a></li></p>
+				<p><li><a href="LHSols.pdf">L'Hopital's Rule</a></li></p>
+				<!--<p><li><a href="141RiemannSumSols.pdf">Riemann Sums Project</a></li></p>
 				<p><li><a href="DefIntegralDomSols.pdf">Definite Integral Dominoes Solutions</a></li></p>-->
 				
 			</div>
