--- a/courses/122/Fall17/Worksheets.html
+++ b/courses/122/Fall17/Worksheets.html
@@ -70,8 +70,8 @@
 				<h2>Activities & Blank Worksheets</h2>
 				<p><li><a href="RiemannSums.pdf">Riemann Sums (In Class Handout)</a></li></p>
 				<p><li><a href="ApproximatingAreaUnderACurve.pdf">Approximating Area Under a Curve: Riemann Sums (includes solutions)</a></li></p>
-				<!--<p><li><a href="uSubPractice.pdf">Integration by Substitution Practice</a></li></p>
-				<p><li><a href="Antiderivatives.pdf">Antiderivative Practice</a></li></p>
+				<p><li><a href="Ch56Practice.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice Problems</a></li></p>
+				<!--<p><li><a href="Antiderivatives.pdf">Antiderivative Practice</a></li></p>
 				<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
 				<p><li><a href="Differentiation.pdf">Chapter 3 Differentiation Worksheet</a></li></p>
 				<p><li><a href="122DerWksht.pdf">Derivative Practice (includes solutions)</a></li></p>-->
