--- a/courses/141/Fall17/LectureNotes.html
+++ b/courses/141/Fall17/LectureNotes.html
@@ -101,7 +101,7 @@
 				<p><li><a href="LectureNotes/Chapter4/S8Thomas(Outline).pdf">Section 4.8 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S1S2Thomas(Outline).pdf">Sections 5.1-5.2 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S3Thomas(Outline).pdf">Section 5.3 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter5/S4Thomas(Outline).pdf">Section 5.4 (Outline)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter5/S4(Thomas)Outline.pdf">Section 5.4 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S5Thomas(Outline).pdf">Section 5.5 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S6Thomas(Outline).pdf">Section 5.6 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter6/S1Thomas(Outline).pdf">Section 6.1 (Outline)</a></li></p>
