--- a/courses/122/Fall17/Worksheets.html
+++ b/courses/122/Fall17/Worksheets.html
@@ -59,8 +59,8 @@
 				<p><li><a href="Worksheet4Sols.pdf">Worksheet 1 (Chapter 3)</a></li></p>
 				<p><li><a href="122RiemannSumSols.pdf">Riemann Sums (In Class Handout)</a></li></p>
 				<p><li><a href="Ch56PracticeSols.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice Problems</a></li></p>
-				<!--<p><li><a href="uSubSols.pdf">Integration by Substitution Solutions</a></li></p>
-				<p><li><a href="DefIntegralDomSols.pdf">Definite Integral Dominoes Solutions</a></li></p>-->
+				<p><li><a href="uSubSols.pdf">Integration by Substitution Solutions</a></li></p>
+				<!--<p><li><a href="DefIntegralDomSols.pdf">Definite Integral Dominoes Solutions</a></li></p>-->
 				
 			</div>
 		</div>
