--- a/courses/141/Fall17/Worksheets.html
+++ b/courses/141/Fall17/Worksheets.html
@@ -71,8 +71,8 @@
 				<p><li><a href="DefinitionofDerivative.pdf">Section 3.1 Practice</a></li></p>
 				<p><li><a href="ImplicitDifferentiationWorksheet.pdf">Implicit Differentiation</a></li></p>
 				<p><li><a href="RelatedRatesWorksheet.pdf">Related Rates</a></li></p>
-				<!--<p><li><a href="ApproximatingAreaUnderACurve.pdf">Approximating Area Under a Curve: Riemann Sums (includes solutions)</a></li></p>
-				<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
+				<p><li><a href="uSubPractice1.pdf">Sections 5.4-5.6 Practice</a></li></p>
+				<!--<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
 				<p><li><a href="Differentiation.pdf">Chapter 3 Differentiation Worksheet</a></li></p>
 				<p><li><a href="122DerWksht.pdf">Derivative Practice (includes solutions)</a></li></p>-->
 			</div>
