Added 122 Fall17 Blank Exams, 141 uSub Practice Sols

--- a/courses/141/Fall17/Worksheets.html
+++ b/courses/141/Fall17/Worksheets.html
@@ -60,7 +60,7 @@
 				<p><li><a href="RelatedRatesWorksheetSols.pdf">Related Rates</a></li></p>
 				<p><li><a href="LHSols.pdf">L'Hopital's Rule</a></li></p>
 				<p><li><a href="141RiemannSumSols.pdf">Riemann Sums Project</a></li></p>
-				<!--<p><li><a href="DefIntegralDomSols.pdf">Definite Integral Dominoes Solutions</a></li></p>-->
+				<p><li><a href="uSubPractice2Sols.pdf">u-Substitution 11/27 Handout</a></li></p>
 				
 			</div>
 		</div>
