--- a/courses/122/Fall17/Exams.html
+++ b/courses/122/Fall17/Exams.html
@@ -53,9 +53,10 @@
 		<div id="trio1">
 			<div class="inner">
 				<h2>Blank Exams</h2>
-				<!--<p><li><a href="Sum17Exam1.pdf">Exam 1 (Chapter 1)</a></li></p>
-				<p><li><a href="Sum17Exam2.pdf">Exam 2 (Chapters 2-4)</a></li></p>
-				<p><li><a href="Sum17Exam3.pdf">Exam 3 (Chapters 5-6)</a></li></p>-->
+				<p><li><a href="F17Exam1.pdf">Exam 1A (Chapter 1)</a></li></p>
+				<p><li><a href="F17Exam1B.pdf">Exam 1B (Chapter 1)</a></li></p>
+				<p><li><a href="F17Exam2A.pdf">Exam 2 (Chapters 2-4)</a></li></p>
+				<p><li><a href="F17Exam3A.pdf">Exam 3 (Chapters 5-6)</a></li></p>
 				<h2>Exam Solutions</h2>
 				<p><li><a href="Sum17Exam1Sols.pdf">Exam 1 Version A (Chapter 1) Sols</a></li></p>
 				<!--<p><li><a href="Sum17Exam2Sols.pdf">Exam 2 (Chapters 2-4) Sols</a></li></p>	
