--- a/courses/141/Fall17/Exams.html
+++ b/courses/141/Fall17/Exams.html
@@ -56,11 +56,12 @@
 				<p><li><a href="S17Exam1A.pdf">Exam 1 Version A</a></li></p>
 				<p><li><a href="S17Exam1B.pdf">Exam 1 Version B</a></li></p>
 				<p><li><a href="F17Exam2.pdf">Exam 2</a></li></p>
+				<p><li><a href="F17Exam3.pdf">Exam 3</a></li></p>
 				<h2>Exam Solutions</h2>
 				<p><li><a href="141exam1ASols.pdf">Exam 1 A Sols</a></li></p>
 				<p><li><a href="141exam1BSols.pdf">Exam 1 B Sols</a></li></p>	
 				<p><li><a href="F17Exam2Sols.pdf">Exam 2 Sols</a></li></p>
-				<!--<p><li><a href="Sum17Exam3Sols.pdf">Exam 3 (Chapters 5-6) Sols</a></li></p>-->
+				<p><li><a href="141F17Exam3Sols.pdf">Exam 3 Sols</a></li></p>
 			</div>
 		</div>
 
