--- a/courses/141/Fall17/LectureNotes.html
+++ b/courses/141/Fall17/LectureNotes.html
@@ -104,8 +104,8 @@
 				<p><li><a href="LectureNotes/Chapter5/S4(Thomas)Outline.pdf">Section 5.4 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S5Thomas(Outline).pdf">Section 5.5 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S6Thomas(Outline).pdf">Section 5.6 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter6/S1Thomas(Outline).pdf">Section 6.1 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter6/S2Thomas(Outline).pdf">Section 6.2 (Outline)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter6/S1Thomas(Outline)Complete.pdf">Section 6.1 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter6/S2Thomas(Outline)Complete.pdf">Section 6.2 (Complete)</a></li></p>
 				
 			</div>
 		</div>
