--- a/courses/141/Fall17/Worksheets.html
+++ b/courses/141/Fall17/Worksheets.html
@@ -61,6 +61,7 @@
 				<p><li><a href="LHSols.pdf">L'Hopital's Rule</a></li></p>
 				<p><li><a href="141RiemannSumSols.pdf">Riemann Sums Project</a></li></p>
 				<p><li><a href="uSubPractice2Sols.pdf">u-Substitution 11/27 Handout</a></li></p>
+				<p><li><a href="VolumeSummary.pdf">Dr. Girardi's Volume Summary</a></li></p>
 				
 			</div>
 		</div>
