added 122 F17 exam sols and solar project sols

--- a/courses/122/Fall17/Exams.html
+++ b/courses/122/Fall17/Exams.html
@@ -59,9 +59,9 @@
 				<p><li><a href="F17Exam3A.pdf">Exam 3 (Chapters 5-6)</a></li></p>
 				<h2>Exam Solutions</h2>
 				<p><li><a href="Sum17Exam1Sols.pdf">Exam 1 Version A (Chapter 1) Sols</a></li></p>
-				<!--<p><li><a href="Sum17Exam2Sols.pdf">Exam 2 (Chapters 2-4) Sols</a></li></p>	
-				<p><li><a href="ECExam2.pdf">Exam 2 Extra Credit (Last problem from Ch. 3 Worksheet)</a></li></p>
-				<p><li><a href="Sum17Exam3Sols.pdf">Exam 3 (Chapters 5-6) Sols</a></li></p>-->
+				<p><li><a href="122exam1bsols.pdf">Exam 1 Version B (Chapter 1) Sols</a></li></p>	
+				<p><li><a href="122exam2sols.pdf">Exam 2 (Chapters 2-4) Sols</a></li></p>
+				<p><li><a href="122exam3sols.pdf">Exam 3 (Chapters 5-6) Sols</a></li></p>
 			</div>
 		</div>
 
