added 122 final exam bingo

--- a/courses/122/Fall17/Worksheets.html
+++ b/courses/122/Fall17/Worksheets.html
@@ -61,6 +61,7 @@
 				<p><li><a href="Ch56PracticeSols.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice Problems</a></li></p>
 				<p><li><a href="uSubSols.pdf">Integration by Substitution Solutions</a></li></p>
 				<p><li><a href="solarsols.pdf">Solar Energy and Riemann Sums Solutions</a></li></p>
+				<p><li><a href="BingoSols.pdf">Final Exam Bingo (Solutions - not in order!)</a></li></p>
 				
 			</div>
 		</div>
@@ -71,8 +72,8 @@
 				<p><li><a href="RiemannSums.pdf">Riemann Sums (In Class Handout)</a></li></p>
 				<p><li><a href="ApproximatingAreaUnderACurve.pdf">Approximating Area Under a Curve: Riemann Sums (includes solutions)</a></li></p>
 				<p><li><a href="Ch56Practice.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice Problems</a></li></p>
-				<!--<p><li><a href="Antiderivatives.pdf">Antiderivative Practice</a></li></p>
-				<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
+				<p><li><a href="FinalExamBingoQuestions.pdf">Final Exam Bingo</a></li></p>
+				<!--<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
 				<p><li><a href="Differentiation.pdf">Chapter 3 Differentiation Worksheet</a></li></p>
 				<p><li><a href="122DerWksht.pdf">Derivative Practice (includes solutions)</a></li></p>-->
 			</div>
