--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
 		<div id="trio2">
 			<div class="inner">
 				<h3>Office Hours</h3>
-				<p>Fall 2017<br/>
-				Monday 7-8pm<br/>
-				Tuesday, Thursday 1-2:30pm<br/>
+				<p>Spring 2018<br/>
+				Monday, Tuesday, Wednesday 2:30-3:30pm<br/>
 				Also by appointment.</p>
 			</div>
 		</div>
