--- a/courses/141/Spring18/LectureNotes.html
+++ b/courses/141/Spring18/LectureNotes.html
@@ -58,12 +58,12 @@
 				<p><li><a href="LectureNotes/Chapter1/S3Thomas.pdf">Section 1.3 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter1/S5Thomas.pdf">Section 1.5 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter1/S6Thomas.pdf">Section 1.6 (Complete)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter2/S1Thomas(Outline).pdf">Section 2.1 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter2/S2Thomas(Outline).pdf">Section 2.2 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter2/S3Thomas(Outline).pdf">Section 2.3 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter2/S4Thomas(Outline).pdf">Section 2.4 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter2/S5Thomas(Outline).pdf">Section 2.5 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter2/S6Thomas(Outline).pdf">Section 2.6 (Outline)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter2/S1Thomas(Complete).pdf">Section 2.1 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter2/S2Thomas(Complete).pdf">Section 2.2 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter2/S3Thomas(Complete).pdf">Section 2.3 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter2/S4Thomas(Complete).pdf">Section 2.4 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter2/S5Thomas(Complete).pdf">Section 2.5 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter2/S6Thomas(Complete).pdf">Section 2.6 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S1Thomas(Outline).pdf">Section 3.1 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S2Thomas(Outline).pdf">Section 3.2 (Outline)</a></li></p>
 				
