--- a/courses/141/Spring18/Quizzes.html
+++ b/courses/141/Spring18/Quizzes.html
@@ -53,14 +53,14 @@
 		<div id="trio1">
 			<div class="inner">
 				<h2>Blank Quizzes</h2>
-				<!--<p><li><a href="Quiz1C.pdf">Quiz 1 - Ch. 1</a></li></p>
-				<p><li><a href="F17Quiz2.pdf">Quiz 2</a></li></p>
-				<p><li><a href="F17Quiz3.pdf">Quiz 3</a></li></p>
+				<p><li><a href="Quiz1C.pdf">Quiz 1 - Ch. 1</a></li></p>
+				<p><li><a href="S18Quiz2.pdf">Quiz 2 - Sections 2.2, 2.4, 2.5</a></li></p>
+				<!--<p><li><a href="F17Quiz3.pdf">Quiz 3</a></li></p>
 				<p><li><a href="F17Quiz4.pdf">Quiz 4</a></li></p>
 				<p><li><a href="F17Quiz6.pdf">Quiz 6</a></li></p>-->
 				<h2>Quiz Solutions</h2>
-				<!--<p><li><a href="Quiz1Sols.pdf">Quiz 1 - Ch. 1</a></li></p>
-				<p><li><a href="Quiz2Sols.pdf">Quiz 2</a></li></p>
+				<p><li><a href="Quiz1Sols.pdf">Quiz 1 - Ch. 1</a></li></p>
+				<!--<p><li><a href="Quiz2Sols.pdf">Quiz 2</a></li></p>
 				<p><li><a href="Quiz3Sols.pdf">Quiz 3</a></li></p>
 				<p><li><a href="Quiz4Sols.pdf">Quiz 4</a></li></p>
 				<p><li><a href="quiz6Sols.pdf">Quiz 6 - Sections 3.7, 3.8</a></li></p>
