--- a/courses/141/Spring18/Worksheets.html
+++ b/courses/141/Spring18/Worksheets.html
@@ -56,7 +56,7 @@
 				<p><li><a href="AlgebraTrigReview.pdf">Paul's Online Math Notes - Algebra/Trig Review</a></li></p>
 				<p><li><a href="FunctionPlacematSolutions.jpg">Recitation Function Placemat</a></li></p>
 				<p><li><a href="141Ch1ReviewSols.pdf">Dr. Girardi's Chapter 1 In-Class Review</a></li></p>
-				<!--<p><li><a href="DerivativeWorksheet.pdf">Derivative Practice</a></li></p>
+				<!--<p><li><a href="DefinitionofDerivative.pdf">Derivative Practice</a></li></p>
 				<p><li><a href="gradeThisQuizSols.pdf">Grade This Quiz Solutions (Recitation Derivative Practice)</a></li></p>
 				<p><li><a href="ImplicitDifferentiationWorksheetSols.pdf">Implicit Differentiation</a></li></p>
 				<p><li><a href="RelatedRatesWorksheetSols.pdf">Related Rates</a></li></p>
@@ -72,8 +72,8 @@
 			<div class="inner">
 				<h2>Activities & Blank Worksheets</h2>
 				<p><li><a href="141Ch1Review.pdf">Chapter 1 In-Class Review</a></li></p>
-				<!--<p><li><a href="DefinitionofDerivative.pdf">Section 3.1 Practice</a></li></p>
-				<p><li><a href="ImplicitDifferentiationWorksheet.pdf">Implicit Differentiation</a></li></p>
+				<p><li><a href="DefinitionofDerivative.pdf">Derivatives Using the Definition</a></li></p>
+				<!--<p><li><a href="ImplicitDifferentiationWorksheet.pdf">Implicit Differentiation</a></li></p>
 				<p><li><a href="RelatedRatesWorksheet.pdf">Related Rates</a></li></p>
 				<p><li><a href="uSubPractice1.pdf">Sections 5.4-5.6 Practice</a></li></p>
 				<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
