141 notes and exam 1 practice

--- a/courses/141/Spring18/Exams.html
+++ b/courses/141/Spring18/Exams.html
@@ -52,11 +52,14 @@
 	<div id="content" class="clearfix shadow">
 		<div id="trio1">
 			<div class="inner">
+				<h2>Practice Problems</h2>
+				<p><li><a href="PracticeProblemsExam1.pdf">Exam 1 Practice</a></li></p>
+				<p><li><a href="MorePracticeExam1.pdf">More Practice for Exam 1</a></li></p>
 				<h2>Blank Exams</h2>
-				<p><li><a href="S17Exam1A.pdf">Exam 1</a></li></p>
-				<!--<p><li><a href="S17Exam1B.pdf">Exam 1 Version B</a></li></p>-->
+				<!--<p><li><a href="S17Exam1A.pdf">Exam 1</a></li></p>
+				<p><li><a href="S17Exam1B.pdf">Exam 1 Version B</a></li></p>
 				<p><li><a href="F17Exam2.pdf">Exam 2</a></li></p>
-				<p><li><a href="F17Exam3.pdf">Exam 3</a></li></p>
+				<p><li><a href="F17Exam3.pdf">Exam 3</a></li></p>-->
 				<h2>Exam Solutions</h2>
 				<!--<p><li><a href="141exam1ASols.pdf">Exam 1 A Sols</a></li></p>
 				<p><li><a href="141exam1BSols.pdf">Exam 1 B Sols</a></li></p>	
