--- a/courses/141/Spring18/LectureNotes.html
+++ b/courses/141/Spring18/LectureNotes.html
@@ -64,8 +64,8 @@
 				<p><li><a href="LectureNotes/Chapter2/S4Thomas(Complete).pdf">Section 2.4 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter2/S5Thomas(Complete).pdf">Section 2.5 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter2/S6Thomas(Complete).pdf">Section 2.6 (Complete)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter3/S1Thomas(Outline).pdf">Section 3.1 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter3/S2Thomas(Outline).pdf">Section 3.2 (Outline)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter3/S1Thomas(Complete).pdf">Section 3.1 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter3/S2Thomas(Complete).pdf">Section 3.2 (Complete)</a></li></p>
 				
 			</div>
 		</div>
