141 practice exam 1 sols

--- a/courses/141/Spring18/Exams.html
+++ b/courses/141/Spring18/Exams.html
@@ -53,7 +53,7 @@
 		<div id="trio1">
 			<div class="inner">
 				<h2>Practice Problems</h2>
-				<p><li><a href="PracticeProblemsExam1.pdf">Exam 1 Practice</a></li></p>
+				<p><li><a href="PracticeProblemsExam1.pdf">Exam 1 Practice</a><a href="practiceExam1Sols.pdf">Solutions</a></li></p>
 				<p><li><a href="MorePracticeExam1.pdf">More Practice for Exam 1</a></li></p>
 				<h2>Blank Exams</h2>
 				<!--<p><li><a href="S17Exam1A.pdf">Exam 1</a></li></p>
