--- a/courses/141/Spring18/Exams.html
+++ b/courses/141/Spring18/Exams.html
@@ -55,13 +55,13 @@
 				<h2>Practice Problems</h2>
 				<p><li><a href="PracticeProblemsExam1.pdf">Exam 1 Practice</a><a href="practiceExam1Sols.pdf"> - Solutions</a></li></p>
 				<p><li><a href="MorePracticeExam1.pdf">More Practice for Exam 1</a><a href="MorePracticeExam1Sols.pdf"> - Solutions</a></li></p>
-				<h2>Blank Exams</h2>
-				<!--<p><li><a href="S17Exam1A.pdf">Exam 1</a></li></p>
-				<p><li><a href="S17Exam1B.pdf">Exam 1 Version B</a></li></p>
+				<h2>Exams</h2>
+				<p><li><a href="Exam1.pdf">Exam 1</a><a href="141S18Exam1Sols.pdf"> - Solutions</a></li></p>
+				<!--<p><li><a href="S17Exam1B.pdf">Exam 1 Version B</a></li></p>
 				<p><li><a href="F17Exam2.pdf">Exam 2</a></li></p>
 				<p><li><a href="F17Exam3.pdf">Exam 3</a></li></p>-->
-				<h2>Exam Solutions</h2>
-				<!--<p><li><a href="141exam1ASols.pdf">Exam 1 A Sols</a></li></p>
+				<!--<h2>Exam Solutions</h2>
+				<p><li><a href="141S18Exam1Sols.pdf">Exam 1 Sols</a></li></p>
 				<p><li><a href="141exam1BSols.pdf">Exam 1 B Sols</a></li></p>	
 				<p><li><a href="F17Exam2Sols.pdf">Exam 2 Sols</a></li></p>
 				<p><li><a href="141F17Exam3Sols.pdf">Exam 3 Sols</a></li></p>-->
