141 Quiz 7 and sols Ch4 S1-3 notes

--- a/courses/141/Spring18/LectureNotes.html
+++ b/courses/141/Spring18/LectureNotes.html
@@ -81,9 +81,7 @@
 				<p><li><a href="LectureNotes/Chapter3/S9ThomasComplete.pdf">Section 3.9 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/Ch3S89Practice.pdf">Section 3.8 and 3.9 Practice Problems</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S10ThomasComplete.pdf">Section 3.10 (Complete)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter4/S1Thomas(Outline).pdf">Section 4.1 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter4/S2Thomas(Outline).pdf">Section 4.2 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter4/S3Thomas(Outline).pdf">Section 4.3 (Outline)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter4/Ch4S1to3Complete.pdf">Section 4.1-4.3 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter4/S4Thomas(Outline).pdf">Section 4.4 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter4/S4ThomasExample.pdf">Section 4.4 (Finished Example)</a></li></p>
 				
