--- a/courses/141/Spring18/LectureNotes.html
+++ b/courses/141/Spring18/LectureNotes.html
@@ -92,12 +92,12 @@
 		<div id="trio3">
 			<div class="inner">
 				<h2>Exam 3</h2>
-				<p><li><a href="LectureNotes/Chapter4/S5Thomas(Outline).pdf">Section 4.5 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter4/S6Thomas(Outline).pdf">Section 4.6 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter4/S8Thomas(Outline).pdf">Section 4.8 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter5/S1S2Thomas(Outline).pdf">Sections 5.1-5.2 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter5/S3Thomas(Outline).pdf">Section 5.3 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter5/S4(Thomas)Outline.pdf">Section 5.4 (Outline)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter4/S5NotabilityComplete.pdf">Section 4.5 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter4/S6NotabilityComplete.pdf">Section 4.6 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter4/S8NotabilityComplete.pdf">Section 4.8 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter5/S1to2Complete.pdf">Sections 5.1-5.2 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter5/S3ThomasComplete.pdf">Section 5.3 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter5/S4ThomasComplete.pdf">Section 5.4 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S5Thomas(Outline).pdf">Section 5.5 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S6Thomas(Outline).pdf">Section 5.6 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter6/S1(Thomas)Complete.pdf">Section 6.1 (Complete)</a></li></p>
