--- a/courses/141/Spring18/Worksheets.html
+++ b/courses/141/Spring18/Worksheets.html
@@ -62,10 +62,10 @@
 				<p><li><a href="ImplicitDifferentiationWorksheetSols.pdf">Implicit Differentiation - Extra Practice</a></li></p>
 				<p><li><a href="RelatedRatesSols.pdf">Related Rates - Recitation Practice</a></li></p>
 				<p><li><a href="RelatedRatesWorksheetSols.pdf">Related Rates - Extra Practice Detailed Solutions</a></li></p>
-				<!--<p><li><a href="LHSols.pdf">L'Hopital's Rule</a></li></p>
-				<p><li><a href="141RiemannSumSols.pdf">Riemann Sums Project</a></li></p>
-				<p><li><a href="uSubPractice2Sols.pdf">u-Substitution 11/27 Handout</a></li></p>
-				<p><li><a href="VolumeSummary.pdf">Dr. Girardi's Volume Summary</a></li></p>-->
+				<p><li><a href="LHSols.pdf">L'Hopital's Rule</a></li></p>
+				<p><li><a href="141RiemannSumSols.pdf">Understanding Riemann Sums</a></li></p>
+				<p><li><a href="uSubPractice2Sols.pdf">u-Substitution Recitation Solutions</a></li></p>
+				<p><li><a href="definiteintegraldominoessol.pdf">Definite Integral Dominoes Solution</a></li></p>
 				
 			</div>
 		</div>
@@ -78,9 +78,10 @@
 				<p><li><a href="ImplicitDifferentiationWorksheet.pdf">Implicit Differentiation - Extra Practice</a></li></p>
 				<p><li><a href="RelatedRates.pdf">Related Rates - Recitation Practice</a></li></p>
 				<p><li><a href="RelatedRatesWorksheet.pdf">Related Rates - Extra Practice (Solutions at the bottom)</a></li></p>
-				<!--<p><li><a href="uSubPractice1.pdf">Sections 5.4-5.6 Practice</a></li></p>
-				<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
-				<p><li><a href="Differentiation.pdf">Chapter 3 Differentiation Worksheet</a></li></p>
+				<p><li><a href="Identifying_Substitutions_Worksheet.pdf">u-Substitution Recitation Worksheet</a></li></p>
+				<p><li><a href="RecognizeIntegrals.pdf">Substitution 5.5 Recognizing Integrals Recitation Worksheet</a></li></p>
+				<p><li><a href="more_integral_dominoes.pdf">Definite Integral Dominoes</a></li></p>
+				<!--<p><li><a href="Differentiation.pdf">Chapter 3 Differentiation Worksheet</a></li></p>
 				<p><li><a href="122DerWksht.pdf">Derivative Practice (includes solutions)</a></li></p>-->
 			</div>
 		</div>
