Deleted u-sub solutions

--- a/courses/141/Spring18/Worksheets.html
+++ b/courses/141/Spring18/Worksheets.html
@@ -64,7 +64,7 @@
 				<p><li><a href="RelatedRatesWorksheetSols.pdf">Related Rates - Extra Practice Detailed Solutions</a></li></p>
 				<p><li><a href="LHSols.pdf">L'Hopital's Rule</a></li></p>
 				<p><li><a href="141RiemannSumSols.pdf">Understanding Riemann Sums</a></li></p>
-				<p><li><a href="uSubPractice2Sols.pdf">u-Substitution Recitation Solutions</a></li></p>
+				<!--<p><li><a href="uSubPractice2Sols.pdf">u-Substitution Recitation Solutions</a></li></p>-->
 				<p><li><a href="definiteintegraldominoessol.pdf">Definite Integral Dominoes Solution</a></li></p>
 				<p><li><a href="RecognizeIntegralsSols.pdf">Substitution 5.5 Recognizing Integrals Solutions</a></li></p>
 				<p><li><a href="AreaBetweenCurvesSols.pdf">Area Between Curves</a></li></p>
