141Ch6S1to2 Complete

--- a/courses/141/Spring18/LectureNotes.html
+++ b/courses/141/Spring18/LectureNotes.html
@@ -100,8 +100,7 @@
 				<p><li><a href="LectureNotes/Chapter5/S4ThomasComplete.pdf">Section 5.4 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S5ThomasComplete.pdf">Section 5.5 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S6ThomasComplete.pdf">Section 5.6 (Complete)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter6/S1(Thomas)Complete.pdf">Section 6.1 (Complete)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter6/S2(Thomas)Complete.pdf">Section 6.2 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter6/Ch6S1to2Complete.pdf">Section 6.1-6.2 (Complete)</a></li></p>
 				
 			</div>
 		</div>
