--- a/courses/122/Summer18/teaching.html
+++ b/courses/122/Summer18/teaching.html
@@ -64,7 +64,7 @@
 	    
 	  </ul></p>
 		<h3>Course Materials</h3>
-		<p>WileyPlus Access Instructions</a></p>
+		<p><a href="WileyFlyer.pdf">WileyPlus Access Instructions</a></p>
 		<p><a href="LectureNotes.html">Lecture Notes</a></p>
 		<p><a href="Worksheets.html">Activities/Worksheets</a></p>
 		<p><a href="Quizzes.html">Quizzes and Solutions</a></p>
