--- a/courses/122/Summer18/teaching.html
+++ b/courses/122/Summer18/teaching.html
@@ -61,14 +61,17 @@
 		<h3>Course Syllabus</h3>
 		<p><ul>
 	    <li><a href="122Y01Summer18Syllabus.pdf">Math 122-Y01 Syllabus</a></li>
-	    
-	  </ul></p>
+	  	</ul></p>
 		<h3>Course Materials</h3>
 		<p><a href="WileyFlyer.pdf">WileyPlus Access Instructions</a></p>
 		<p><a href="LectureNotes.html">Lecture Notes</a></p>
 		<p><a href="Worksheets.html">Activities/Worksheets</a></p>
 		<p><a href="Quizzes.html">Quizzes and Solutions</a></p>
 		<p><a href="Exams.html">Exams and Solutions</a></p>
+		<h3>Resources</h3>
+		<p><a href="https://tutortrac.ssc.sa.sc.edu/tracweb40/main.4sp">Make an Appointment for 1:1 Tutoring through the SSC</a></p>
+		<p><a href="https://drive.google.com/open?id=1XVyv9rdElwQ5-ilB-AzdOcMdTle6YyXoyhwxWlDM7A8">SSC Drop-In Tutoring Schedule</a></p>
+		<p>LeConte 105 Summer Tutoring Schedule: MTWR 10:30am-2:30pm</p>
 	</div>
 
 	<div id="footer" class="shadow">
