122Sum18Exam1PracticeSols

--- a/courses/122/Summer18/Worksheets.html
+++ b/courses/122/Summer18/Worksheets.html
@@ -58,6 +58,7 @@
 				<p><li><a href="AROCApplicationSols.pdf">La Quebrada Divers (Average Rate of Change)</a></li></p>
 				<p><li><a href="FunctionTransformationsSols.pdf">Function Transformations</a></li></p>
 				<p><li><a href="ExponentialsAndLogarithmsSols.pdf">Exponential and Logarithm Applications</a></li></p>
+				<p><li><a href="Sum18Exam1PracticeSols.pdf">Exam 1 Practice Problems</a></li></p>
 				<!--<p><li><a href="122RiemannSumSols.pdf">Riemann Sums (In Class Handout)</a></li></p>
 				<p><li><a href="Ch56PracticeSols.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice Problems</a></li></p>
 				<p><li><a href="uSubSols.pdf">Integration by Substitution Solutions</a></li></p>
