--- a/courses/122/Summer18/Worksheets.html
+++ b/courses/122/Summer18/Worksheets.html
@@ -60,8 +60,8 @@
 				<p><li><a href="ExponentialsAndLogarithmsSols.pdf">Exponential and Logarithm Applications</a></li></p>
 				<p><li><a href="Sum18Exam1PracticeSols.pdf">Exam 1 Practice Problems</a></li></p>
 				<p><li><a href="122AlgebraReviewSols.pdf">Exam 1 Extra Credit - Algebra Review</a></li></p>
-				<!--<p><li><a href="122RiemannSumSols.pdf">Riemann Sums (In Class Handout)</a></li></p>
-				<p><li><a href="Ch56PracticeSols.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice Problems</a></li></p>
+				<p><li><a href="Ch3DifferentiationSols.pdf">Chapter 3 Differentiation</a></li></p>
+				<!--<p><li><a href="Ch56PracticeSols.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice Problems</a></li></p>
 				<p><li><a href="uSubSols.pdf">Integration by Substitution Solutions</a></li></p>
 				<p><li><a href="solarsols.pdf">Solar Energy and Riemann Sums Solutions</a></li></p>
 				<p><li><a href="BingoSols.pdf">Final Exam Bingo (Solutions - not in order!)</a></li></p>-->
@@ -80,6 +80,11 @@
 				<p><li><a href="FunctionTransformations.pdf">Function Transformations</a></li></p>
 				<p><li><a href="ExponentialsAndLogarithms.pdf">Exponential and Logarithm Applications</a></li></p>
 				<p><li><a href="Sum18Exam1Practice.pdf">Exam 1 Practice Problems</a></li></p>
+				<p><li><a href="ProdQuot.pdf">Product and Quotient Rule Practice</a></li></p>
+				<p><li><a href="ChainRule.pdf">Chain Rule Practice</a></li></p>
+				<p><li><a href="DerivativeFillBlank.pdf">Fill in the Blank - Derivative Concepts</a></li></p>
+				<p><li><a href="Ch3Differentiation.pdf">Chapter 3 Differentiation</a></li></p>
+				<p><li><a href="PracticeExam2.pdf">Exam 2 Practice Problems</a></li></p>
 			</div>
 		</div>
 
