--- a/courses/122/Summer18/Worksheets.html
+++ b/courses/122/Summer18/Worksheets.html
@@ -67,7 +67,7 @@
 				<p><li><a href="Ch56PracticeSols.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice</a></li></p>
 				<p><li><a href="solarsols.pdf">Solar Energy and Riemann Sums Solutions</a></li></p>
 				<p><li><a href="DefIntegralDomSols.pdf">Definite Integral Dominoes Solutions by Hand</a></li></p>
-				<p><li><a href="uSubSols.pdf">Integration by Substitution Solutions</a></li></p>
+				<p><li><a href="uSubPracticeSols.pdf">Integration by Substitution Solutions</a></li></p>
 				<!--<p><li><a href="BingoSols.pdf">Final Exam Bingo (Solutions - not in order!)</a></li></p>-->
 				
 			</div>
