--- a/studentresources.html
+++ b/studentresources.html
@@ -18,7 +18,7 @@
 		<ul class="toplinks_links">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="teaching.html">Teaching</a></li>
-			<li><a href="CV.pdf">CV</a></li>
+			<li><a href="CVAClifton.pdf">CV</a></li>
 			<li><a href="#">Student Resources</a></li>
 		</ul>
 	</div>
